--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     
     <meta property="og:title" content="המדריך האינטראקטיבי למשחק קלפי האספנות" />
     <meta property="og:description" content="התחילו את המסע שלכם בעולם קלפי האספנות של טלגרם ופתחו חנות משלכם!" />
+    <!-- Updated OG Image URL to be an absolute path -->
     <meta property="og:image" content="https://osifeu-prog.github.io/Cardgame/S1/b4048d9a-0341-4b7b-84c8-509873947aba.jpg" />
     <meta property="og:url" content="https://osifeu-prog.github.io/Cardgame/" />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="https://osifeu-prog.github.io/Cardgame/S1/b4048d9a-0341-4b7b-84c8-509873947aba.jpg" />
     
     <!-- Chosen Palette: Warm Neutrals -->
     <!-- Application Structure Plan: A role-based SPA. Users select a role (Admin, Manager, Collector) via top navigation buttons. The main content area dynamically displays a tailored dashboard/flowchart for that role. This structure was chosen because the source describes distinct user journeys and permission levels, making a role-based view the most intuitive way to understand the entire ecosystem. It simplifies a complex process by allowing users to focus on one perspective at a time. -->
@@ -197,7 +199,7 @@
                         <li><strong>טלפון:</strong> 0506861837</li>
                     </ul>
                 </div>
-            </section>
+            </section>osif.e.u@gmail.com
 
             <!-- Manager's View -->
             <section id="manager" class="content-section">
