--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             flex-shrink: 0;
             z-index: 10;
         }
-          .chart-container {
+        .chart-container {
             position: relative; 
             width: 100%; 
             max-width: 600px; 
@@ -154,7 +154,7 @@
                                 <div class="p-3 bg-white rounded-lg shadow-sm">
                                     <h4 class="font-bold text-base mb-2">העברה בנקאית</h4>
                                     <strong>שם מוטב:</strong> אלעזר בלוי <br>
-                                    <strong>בנק:</strong> ONE ZERO (18) <br>
+                                    <strong>בנק:</strong> ONE ZERO 18 <br>
                                     <strong>סניף:</strong> 001 <br>
                                     <strong>חשבון:</strong> 215875698
                                 </div>
@@ -182,6 +182,25 @@
                             <p class="text-gray-600">לאחר פתיחת החנות, תוכלו לפרסם את הקלף החדש שלכם בקבוצת ה-NFT הקהילתית, להציג את החנות החדשה שלכם, ולהתחיל לסחור!</p>
                             <a href="https://t.me/+HIzvM8sEgh1kNWY0" target="_blank" class="mt-2 inline-block text-blue-600 hover:underline">הצטרפו לקבוצה</a>
                         </div>
+                    </div>
+                </div>
+
+                <!-- New section for unique user images -->
+                <div class="card p-6 mt-8">
+                    <h2 class="text-2xl font-semibold mb-4 text-gray-700 text-center">גלריית תמונות ייחודיות לרכישה</h2>
+                    <p class="text-gray-600 mb-6 text-center max-w-2xl mx-auto">
+                        אלו הן התמונות הייחודיות שתוכלו לרכוש. לאחר אימות התשלום, הן יועברו לבעלותכם, ותוכלו למכור אותן ולהרוויח כסף מהרכישה הראשונה!
+                    </p>
+                    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+                        <img src="0533af5c-a0c8-4197-b797-662d1b154012.jpg" 
+                             alt="תמונה ייחודית 1" 
+                             class="w-full h-auto rounded-xl shadow-md transform transition-transform duration-300 hover:scale-105">
+                        <img src="b4048d9a-0341-4b7b-84c8-509873947aba.jpg" 
+                             alt="תמונה ייחודית 2" 
+                             class="w-full h-auto rounded-xl shadow-md transform transition-transform duration-300 hover:scale-105">
+                        <img src="c344fdcb-f0d0-4fd5-a29a-4b619ff6dfb3.jpg" 
+                             alt="תמונה ייחודית 3" 
+                             class="w-full h-auto rounded-xl shadow-md transform transition-transform duration-300 hover:scale-105">
                     </div>
                 </div>
 
